--- a/HTML/fakebook/fakebook.html
+++ b/HTML/fakebook/fakebook.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles.css">
   <title>FakeBook</title>
+  <script src="http://localhost:35729/livereload.js">
+  </script>
 </head>
 <body>
   <header>
@@ -59,7 +61,7 @@
         <section class="timeline">
         </section>
         <section class="Community-information">
-          
+
         </section>
       </main>
     </section>
