--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles-resume.css">
   <title> Terry Patterson</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
