--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 <head>
   <link rel="stylesheet" href="styles-resume.css">
   <title> Terry Patterson</title>
@@ -18,46 +18,55 @@
     </h1>
     <hr/>
     <section>
-      <h2>
-        Skills
-      </h2>
-      I have some experince with Java, Python, and HTML. I also have experince with spreadsheets and customer service.
+        <section>
+          <h2>
+            Skills
+          </h2>
+          I have some experince with Java, Python, and HTML.
+          I also have experince with spreadsheets and customer service.
+        </section>
       <h2>
         Experince
       </h2>
-      <h3>
-        Wendy's At Merchant's Walk, 1312 Johnson Ferry Rd, Marietta, GA 30068
-      </h3>
-      <h4>
-        Crew Member
-      </h4>
-      <date>August 2017 - November 2017</date><br/>
-      <ul>
-        <li>Responsible for preparing  sandwhiches based on customer requests</li>
-        <li>Trained new sandwhich makers</li>
-        <li>Managed front of house during peak hours</li>
-      </ul>
-      <h3>
-        Harpoon Gaming
-      </h3>
-      <h4>
-        Server Administrator
-      </h4>
-      <date>Recall Date</date>
-      <ul>
-        <li>Assisted in the enforcement of rules on and managment of the Server</li>
-      </ul>
+      <section>
+          <h3>
+            Wendy's At Merchant's Walk, 1312 Johnson Ferry Rd, Marietta, GA 30068
+          </h3>
+          <h4>
+            Crew Member
+          </h4>
+          <time>August 2017 - November 2017</time><br/>
+          <ul>
+            <li>Responsible for preparing  sandwhiches based on customer requests</li>
+            <li>Trained new sandwhich makers</li>
+            <li>Managed front of house during peak hours</li>
+          </ul>
+      </section>
       <h2>
         Education
       </h2>
-      <h3>
-        Pope High School, 3001 Hembree Rd NE, Marietta, GA 30062
-      </h3>
-      <h4>
-        High School Diploma
-      </h4>
-      <date>August 2013 - May 2017</date><br/>
-      Took intoduction to Digital Technology, Computer Science Principles, and AP Computer Sciences
+        <section>
+          <h3>
+            Pope High School, 3001 Hembree Rd NE, Marietta, GA 30062
+          </h3>
+          <h4>
+            High School Diploma
+          </h4>
+          <time>August 2013 - May 2017</time><br/>
+          Took intoduction to Digital Technology, Computer Science Principles,
+          and AP Computer Sciences
+        </section>
+        <section>
+            <h3>
+                Digital Crafts, 3423 Piedmont Rd NE, Atlanta, GA 30305
+            </h3>
+            <h4>
+                Certificate
+            </h4>
+            <time>January 2018 - May 2018</time><br/>
+            Learn Python, HTML, CSS, Javascript, and Node during the full stack
+            immersive course.
+        </section>
     </section>
   </body>
 </html>
