Added meta tags for resume page

--- a/resume.html
+++ b/resume.html
@@ -4,13 +4,16 @@
   <link rel="stylesheet" href="styles-resume.css">
   <title> Terry Patterson</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="The Resume of Junior Software engineer Terry Patterson">
+  <meta charset="utf-8">
+  <meta name="author" content="Terry Patterson">
 </head>
   <body>
     <header>
       <address>2531 Oakrill Rd<br/>
         Marietta, GA 30062<br/>
         (678)-383-7780<br/>
-        Terryp@wegrok.net</address><br/>
+        <a href="Terryp@wegrok.net">Terryp@wegrok.net</a></address><br/>
       </header>
 
     <h1>
