Finished Print Version setupt

--- a/resume.html
+++ b/resume.html
@@ -9,67 +9,130 @@
   <meta name="author" content="Terry Patterson">
 </head>
   <body>
-    <header>
-      <address>2531 Oakrill Rd<br/>
-        Marietta, GA 30062<br/>
-        (678)-383-7780<br/>
-        <a href="Terryp@wegrok.net">Terryp@wegrok.net</a></address><br/>
-      </header>
-
-    <h1>
-      Terry Patterson
-    </h1>
-    <hr/>
-    <section>
-        <section>
-          <h2>
-            Skills
-          </h2>
-          I have some experince with Java, Python, and HTML.
-          I also have experince with spreadsheets and customer service.
-        </section>
-      <h2>
-        Experince
-      </h2>
-      <section>
-          <h3>
-            Wendy's At Merchant's Walk, 1312 Johnson Ferry Rd, Marietta, GA 30068
-          </h3>
-          <h4>
-            Crew Member
-          </h4>
-          <time>August 2017 - November 2017</time><br/>
-          <ul>
-            <li>Responsible for preparing  sandwhiches based on customer requests</li>
-            <li>Trained new sandwhich makers</li>
-            <li>Managed front of house during peak hours</li>
-          </ul>
-      </section>
-      <h2>
-        Education
-      </h2>
-        <section>
-          <h3>
-            Pope High School, 3001 Hembree Rd NE, Marietta, GA 30062
-          </h3>
-          <h4>
-            High School Diploma
-          </h4>
-          <time>August 2013 - May 2017</time><br/>
-          Took intoduction to Digital Technology, Computer Science Principles,
-          and AP Computer Sciences
-        </section>
-        <section>
-            <h3>
-                Digital Crafts, 3423 Piedmont Rd NE, Atlanta, GA 30305
-            </h3>
-            <h4>
-                Certificate
-            </h4>
-            <time>January 2018 - May 2018</time><br/>
-            Learn Python, HTML, CSS, Javascript, and Node during the full stack
-            immersive course.
-        </section>
+     <section class="header print">
+        <header>
+          <address>
+            Marietta, GA<br/>
+            (678)-383-7780<br/>
+            Terryp@wegrok.net<br/>
+            Terryp.org<br/>
+            github.com/terryRPatterson<br/>
+            www.linkedin.com/in/terry-patterson-375ba4148/<br/>
+            </address>
+        <h1>
+            Terry Patterson
+        </h1>
+        <hr/>
+        </header>
     </section>
+    <main>
+        <section id="about-me">
+            <h2 class="section-title">
+                About Me
+            </h2>
+            <hr class="print"/>
+            <!-- <section class="detail"> -->
+        </section>
+        <section id="skills">
+          <h2 class="section-title">
+            Development Skills
+          </h2>
+            <section class="detail">
+                <summary class="print">Python 2 & 3, Javascript, NodeJS, jQuery,
+                    CSS, SCSS, HTML, PostgreSQL, RedHat Linux, Bash, Git, Atom,
+                    Google Chrome Development Tools
+                </summary>
+                <ul class="subsection screen">
+                    <li class="section-title">
+                        <h3 class="section-title">Langauges</h3>
+                        <ul class="detail">
+                            <li>Python
+                                <ul class="detail">
+                                    <li>2</li>
+                                    <li>3</li>
+                                </ul>
+                            </li>
+                            <li>Javascript
+                                <ul class="detail">
+                                    <li>NodeJS</li>
+                                    <li>ES 6</li>
+                                    <li>ES 7</li>
+                                    <li>jQuery</li>
+                                </ul>
+                            </li>
+                            <li>CSS
+                                <ul class="detail">
+                                    <li>SCSS</li>
+                                </ul>
+                            </li>
+                            <li>HTML</li>
+                            <li>PostgreSQL</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>Tools</h3>
+                        <ul class="detail">
+                            <li>Bash</li>
+                            <li>Atom</li>
+                            <li>Git</li>
+                            <li>Chrome Development Tools</li>
+                        </ul>
+                    </li>
+                </ul>
+            </section>
+      </section >
+      <section id="jobs">
+          <h2 class="section-title">
+            Experince
+          </h2>
+          <hr class="print"/>
+          <section id="wendys" class="detail">
+              <h3>
+                Wendy's At Merchant's Walk, 1312 Johnson Ferry Rd, Marietta, GA 30068
+              </h3>
+              <h4>
+                Crew Member
+              </h4>
+              <time>August 2017 - November 2017</time><br/>
+              <ul>
+                <li>Responsible for preparing  sandwhiches based on customer requests</li>
+                <li>Trained new sandwhich makers</li>
+                <li>Managed front of house during peak hours</li>
+              </ul>
+          </section>
+      </section>
+      <section id="Education">
+          <h2 class="section-title">
+            Education
+          </h2>
+          <hr class="print">
+            <section id="HighSchool" class="detail">
+              <h3>
+                Pope High School, 3001 Hembree Rd NE, Marietta, GA 30062
+              </h3>
+              <h4>
+                High School Diploma
+              </h4>
+              <time>August 2013 - May 2017</time><br/>
+              Took intoduction to Digital Technology, Computer Science Principles,
+              and AP Computer Sciences
+            </section>
+            <section id="DigitalCrafts" class="detail">
+                <h3>
+                    Digital Crafts, 3423 Piedmont Rd NE, Atlanta, GA 30305
+                </h3>
+                <h4>
+                    Certificate
+                </h4>
+                <time>January 2018 - May 2018</time><br/>
+                Learned Python, HTML, CSS, Javascript, and Node during the full
+                stack immersive course.
+            </section>
+        </section>
+    </main>
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"
+    integrity="sha256-oSrCnRYXvHG31SBifqP2PM1uje7SJUyX0nTwO2RJV54="
+    crossorigin="anonymous"/>
   </body>
 </html>
