--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Terry Patterson</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-     rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
     <noscript>
-        <input type="checkbox" class="modal-closing-trick"
-        id="modal-closing-trick">
+        <input type="checkbox" class="modal-close"
+        id="modal-close">
         <div class="noscript-overlay"></div>
         <div class="modal">
             We have detected that javascript is not present in you browser.
@@ -20,7 +18,7 @@
             Please either enable javascript or
             <a href="https://browsehappy.com/">upgrade to a broswer</a>
              that supports javascript.
-        <label class="button" for="modal-closing-trick">
+        <label class="button" for="modal-close">
             <br>
           <em>Close Message</em>
         </label>
@@ -28,23 +26,16 @@
     </noscript>
     <header class="header top_bar">
         <nav class="nav_container">
-            <img src="/static/icons/menu.svg" alt="Drop down menu"
-            class="hamburger_menu btn"/>
-            <nav class="nav_menu">
-            <h2 class="header">Navigation Menu</h2>
-                <ul class="nav_options">
-                    <li><a href="#" class="active">Home</a></li>
-                    <li><a href="resume.html">
-                        Resume</a></li>
-                </ul>
-            </nav>
+            <a href="#" class="active">Home</a>
+            <a href="resume.html" target="_blank" rel="noreferrer noopener">
+                Resume</a>
         </nav>
     <h1>Terry Patterson</h1>
     </header>
     <main>
         <header class="main_picture">
             <a href="static/Terry.jpg">
-            <img src="static/Terry.jpg"
+            <img src="static/TerryThumbnail.jpg"
             alt="Picture of Terry Patterson" class="portrait"/>
             </a>
             <h1>Hello, I'm Terry Patterson</h1>
@@ -56,30 +47,112 @@
                 decided to pursue coding as a career. To that end I took
                 <a href="https://www.digitalcrafts.com/">Digital Craft’s</a>
                 <a href="https://www.digitalcrafts.com/immersive-web.html">
-                    four week immersive bootcamp.</a><br/>
+                    four month immersive bootcamp.</a><br/>
             </p>
-            <section class="projects column-flex">
-                <h2>Featured Project</h2>
-                <section class="demo-box column-flex featured" id="showcase">
-                    Project Description and links
-                    <button class="demo-toggle" id="showcase-btn" type="submit">
-                        Video Walkthrough</button> <iframe width="560" height="315"
-                        src="https://www.youtube-nocookie.com/embed/XQu8TTBmGhA?rel=0"
-                        allowfullscreen class="demo video-demo">
-                    </iframe>
-                    <iframe height="265" title="Placeholder"
-                        src="https://codepen.io/Terryp/embed/VXgdGd/?height=265&theme-id=0&default-tab=js,result&embed-version=2"
-                        allowfullscreen="true" width="100%"
-                        class="demo live-demo active">
-                        See the Pen <a href="https://codepen.io/Terryp/pen/VXgdGd/">
-                        Placeholder</a> by Terry Patterson (
-                        <a href="https://codepen.io/Terryp">@Terryp</a>)on
-                        <a href="https://codepen.io">CodePen</a>
-                    </iframe>
-                </section>
+        <section class="projects column-flex">
+            <h2>Featured Project</h2>
+            <div class="demo-box column-flex featured" id="showcase">
+                Project Description and links
+                <button class="demo-toggle" id="showcase-btn" type="submit">
+                    Video Walkthrough</button> <iframe width="560" height="315"
+                    src="https://www.youtube-nocookie.com/embed/XQu8TTBmGhA?rel=0"
+                    allowfullscreen class="demo video-demo">
+                </iframe>
+                <iframe height="265" title="Placeholder"
+                    src="https://codepen.io/Terryp/embed/VXgdGd/?height=265&theme-id=0&default-tab=js,result&embed-version=2"
+                    allowfullscreen="true" width="100%"
+                    class="demo live-demo active">
+                    See the Pen <a href="https://codepen.io/Terryp/pen/VXgdGd/">
+                    Placeholder</a> by Terry Patterson (
+                    <a href="https://codepen.io/Terryp">@Terryp</a>)on
+                    <a href="https://codepen.io">CodePen</a>
+                </iframe>
+            </div>
                 <hr>
                 <h2>Other Project</h2>
-            </section>
+                <p> This section will include at least 4 projects covering
+                    static page creation front-end javascript, backend javascript
+                    , and python.</p>
+                <div class="other-projects">
+                    <div class="demo-box column-flex">
+                        Project Description and links
+                        <button class="demo-toggle" type="submit">
+                            Video Walkthrough</button> <iframe width="560" height="315"
+                            src="https://www.youtube-nocookie.com/embed/XQu8TTBmGhA?rel=0"
+                            allowfullscreen class="demo video-demo">
+                        </iframe>
+                        <iframe height="265" title="Placeholder"
+                            src="https://codepen.io/Terryp/embed/VXgdGd/?height=265&theme-id=0&default-tab=js,result&embed-version=2"
+                            allowfullscreen="true" width="100%"
+                            class="demo live-demo active">
+                            See the Pen <a href="https://codepen.io/Terryp/pen/VXgdGd/">
+                            Placeholder</a> by Terry Patterson (
+                            <a href="https://codepen.io/Terryp">@Terryp</a>)on
+                            <a href="https://codepen.io">CodePen</a>
+                        </iframe>
+                    </div>
+                    <div class="demo-box column-flex">
+                        Project Description and links
+                        <button class="demo-toggle" type="submit">
+                            Video Walkthrough</button> <iframe width="560" height="315"
+                            src="https://www.youtube-nocookie.com/embed/XQu8TTBmGhA?rel=0"
+                            allowfullscreen class="demo video-demo">
+                        </iframe>
+                        <iframe height="265" title="Placeholder"
+                            src="https://codepen.io/Terryp/embed/VXgdGd/?height=265&theme-id=0&default-tab=js,result&embed-version=2"
+                            allowfullscreen="true" width="100%"
+                            class="demo live-demo active">
+                            See the Pen <a href="https://codepen.io/Terryp/pen/VXgdGd/">
+                            Placeholder</a> by Terry Patterson (
+                            <a href="https://codepen.io/Terryp">@Terryp</a>)on
+                            <a href="https://codepen.io">CodePen</a>
+                        </iframe>
+                    </div>
+                </div>
+        </section>
+        <div>
+            <h2>Contact Information</h2>
+            <hr>
+            <address class="contact">
+                <div id="email" class="contact-option">
+                    <a rel="noopener noreferrer" target="_blank"
+                    href="https://commons.wikimedia.org/wiki/File:TK_email_icon.svg">
+                    <img alt="Picture of Envolope Indicates Email"
+                    class="icon"
+                    src="https://upload.wikimedia.org/wikipedia/commons/5/50/TK_email_icon.svg">
+
+                    </a>
+                    <a href="mailto:Terryp@wegrok.net">
+                        Terryp@wegrok.net</a>
+                </div>
+                <div id="phoneNumber" class="contact-option">
+                    <a rel="noopener noreferrer" target="_blank"
+                    href="https://commons.wikimedia.org/wiki/File:1195445181899094722molumen_phone_icon.svg.hi.png">
+                    <img alt="Icon of a telephone" class="icon"
+                    src="https://upload.wikimedia.org/wikipedia/commons/1/15/1195445181899094722molumen_phone_icon.svg.hi.png">
+                    </a>
+                    <a href="tel:6783837780">678-383-7780</a>
+                </div>
+                <div id="linkedin" class="contact-option">
+                    <a rel="noopener noreferrer" target="_blank"
+                    href="https://www.linkedin.com/in/terry-patterson-375ba4148/">
+                        <img src="static/Linkedin.png" alt="linkedin"
+                        class="linkedin-logo"/></a>
+                    </div>
+                <div id="GitHub" class="contact-option">
+                    <a href="https://github.com/logos"
+                    rel="noopener noreferrer" target="_blank">
+                        <img
+                        src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png"
+                        alt="Github Octocat logo" class="icon">
+                    </a>
+                    <a href="https://github.com/TerryRPatterson"
+                     rel="noopener noreferrer" target="_blank">
+                        GitHub</a>
+
+                </div>
+            </address>
+        </div>
     </main>
     <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
