Finished exporting resume

--- a/resume.html
+++ b/resume.html
@@ -95,28 +95,7 @@
                 </ul>
             </section>
       </section >
-      <section id="jobs">
-          <h2 class="section-title">
-            Other Experince
-          </h2>
-          <hr class="print"/>
-          <section id="wendys" class="detail">
-              <h3>
-                Wendy's At Merchant's Walk, 1312 Johnson Ferry Rd, Marietta,
-                GA 30068
-              </h3>
-              <h4>
-                Crew Member
-              </h4>
-              <time>August 2017 - November 2017</time><br/>
-                <ul class="detail screen">
-                    <li>Responsible for preparing  sandwhiches based on customer
-                        requests</li>
-                    <li>Trained new sandwhich makers</li>
-                    <li>Managed front of house during peak hours</li>
-              </ul>
-          </section>
-      </section>
+
       <section id="Education">
           <h2 class="section-title">
             Education
@@ -129,13 +108,13 @@
                 <h4>
                     Certificate
                 </h4>
-                <time>January 2018 - May 2018</time><br/>
+                <time>January 2018 - May 2018 Expected</time><br/>
                 Learned Python, HTML, CSS, Javascript, and Node during the full
                 stack immersive course.
             </section>
             <section id="HighSchool" class="detail">
                 <h3>
-                    Pope High School, 3001 Hembree Rd NE, Marietta, GA 30062
+                    Pope High School
                 </h3>
                 <h4>
                     High School Diploma
@@ -145,6 +124,24 @@
                     Took intoduction to Digital Technology, Computer Science
                     Principles, and AP Computer Sciences
                 </summary>
+            </section>
+        </section>
+        <section id="jobs">
+            <h2 class="section-title">
+              Other Experince
+            </h2>
+            <hr class="print"/>
+            <section id="wendys" class="detail">
+                <h4>
+                  Crew Member
+                </h4>
+                <time>August 2017 - November 2017</time><br/>
+                  <!-- <ul class="detail screen">
+                      <li>Responsible for preparing  sandwhiches based on customer
+                          requests</li>
+                      <li>Trained new sandwhich makers</li>
+                      <li>Managed front of house during peak hours</li>
+                </ul> -->
             </section>
         </section>
     </main>
