Worked on main page, and updated styling

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header class="header top_bar">
         <nav class="nav_container">
             <a href="#" class="active">Home</a>
-            <a href="resume.html" target="_blank" rel="noreferrer noopener">
+            <a href="resume.html"  rel="noreferrer noopener">
                 Resume</a>
         </nav>
     <h1>Terry Patterson</h1>
@@ -55,17 +55,13 @@
                 Project Description and links
                 <button class="demo-toggle" id="showcase-btn" type="submit">
                     Video Walkthrough</button> <iframe width="560" height="315"
-                    src="https://www.youtube-nocookie.com/embed/XQu8TTBmGhA?rel=0"
+                    src="https://www.youtube.com/embed/PlbsAkes1VU"
                     allowfullscreen class="demo video-demo">
                 </iframe>
-                <iframe height="265" title="Placeholder"
-                    src="https://codepen.io/Terryp/embed/VXgdGd/?height=265&theme-id=0&default-tab=js,result&embed-version=2"
+                <iframe height="500" title="Placeholder"
+                    src="https://digicaching.herokuapp.com/login"
                     allowfullscreen="true" width="100%"
                     class="demo live-demo active">
-                    See the Pen <a href="https://codepen.io/Terryp/pen/VXgdGd/">
-                    Placeholder</a> by Terry Patterson (
-                    <a href="https://codepen.io/Terryp">@Terryp</a>)on
-                    <a href="https://codepen.io">CodePen</a>
                 </iframe>
             </div>
                 <hr>
@@ -115,7 +111,7 @@
             <hr>
             <address class="contact">
                 <div id="email" class="contact-option">
-                    <a rel="noopener noreferrer" target="_blank"
+                    <a rel="noopener noreferrer"
                     href="https://commons.wikimedia.org/wiki/File:TK_email_icon.svg">
                     <img alt="Picture of Envolope Indicates Email"
                     class="icon"
@@ -126,7 +122,7 @@
                         Terryp@wegrok.net</a>
                 </div>
                 <div id="phoneNumber" class="contact-option">
-                    <a rel="noopener noreferrer" target="_blank"
+                    <a rel="noopener noreferrer"
                     href="https://commons.wikimedia.org/wiki/File:1195445181899094722molumen_phone_icon.svg.hi.png">
                     <img alt="Icon of a telephone" class="icon"
                     src="https://upload.wikimedia.org/wikipedia/commons/1/15/1195445181899094722molumen_phone_icon.svg.hi.png">
@@ -134,20 +130,24 @@
                     <a href="tel:6783837780">678-383-7780</a>
                 </div>
                 <div id="linkedin" class="contact-option">
-                    <a rel="noopener noreferrer" target="_blank"
-                    href="https://www.linkedin.com/in/terry-patterson-375ba4148/">
-                        <img src="static/Linkedin.png" alt="linkedin"
-                        class="linkedin-logo"/></a>
+                    <a rel="noopener noreferrer"
+                    href="https://brand.linkedin.com/">
+                        <img src="static/icons/Linkedin-Icon.png" alt="linkedin"
+                        class="icon"/></a>
+                        <a href="https://www.linkedin.com/in/terry-patterson-375ba4148/"
+                        rel="noopener noreferrer">
+                        Linkedin
+                    </a>
                     </div>
                 <div id="GitHub" class="contact-option">
                     <a href="https://github.com/logos"
-                    rel="noopener noreferrer" target="_blank">
+                    rel="noopener noreferrer">
                         <img
                         src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png"
                         alt="Github Octocat logo" class="icon">
                     </a>
                     <a href="https://github.com/TerryRPatterson"
-                     rel="noopener noreferrer" target="_blank">
+                     rel="noopener noreferrer" >
                         GitHub</a>
 
                 </div>
