Added site link to resume and changed index link to the pdf

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header class="header top_bar">
         <nav class="nav_container">
             <a href="#" class="active">Home</a>
-            <a href="resume.html"  rel="noreferrer noopener">
+            <a href="static/Terry-Patterson-Resume.pdf"  rel="noreferrer noopener">
                 Resume</a>
         </nav>
     <h1>Terry Patterson</h1>
