Finished add other projects

--- a/index.html
+++ b/index.html
@@ -88,13 +88,42 @@
                         automaticlly retrive the user token and send it with
                         the fetch call, and respond to receiving a 401 status
                         code.
-                        </div>
+                    </div>
                     <div class="demo-box column-flex">
                         <h3>Request Quest</h3>
-                        <p class="text-paragraph"
+                        <p class="text-paragraph">
                         <a href="https://github.com/TerryRPatterson/dc-rpg">
+                            Request Quest</a> is a turn-based rpg using
+                            <a href="https://reactjs.org/">React,</a>
+                            <a href="https://redux.js.org/"> Redux,</a>
+                            and <a href="https://github.com/acdlite/recompose">
+                                Recompose</a> on the frontend, and
+                                <a href="https://nodejs.org/en/">NodeJS</a>,
+                                <a href="https://expressjs.com/">ExpressJS</a>
+                                , and <a href="https://www.postgresql.org/">
+                                PostgreSQL on the backend.</a>
+
+                            </p>
+
+                    </div>
+                    <div class="demo-box column-flex">
+                        <h3>Bibliotech</h3>
+                        <p class="text-paragraph">
+                        <a href="https://github.com/ellenkramp/Bibiliotech">
                             Bibliotech</a> is a program allowing users to manage
-                            large collections of books.
+                            large collections of books.</p>
+
+                    </div>
+                    <div class="demo-box column-flex">
+                        <h3>Pulse Plus</h3>
+                        <p class="text-paragraph">
+                        <a href="https://github.com/TerryRPatterson/didactic-bassoon">
+                            Pulse Plus</a> is a dashboard which connects
+                            <a href="https://slack.com/"> Slack</a>, and
+                            <a href="https://github.com/">Github</a>; giving
+                            maintainers an overview of the conversations
+                            happening on both services, and sorting messages
+                            about issues or pull request together.</p>
 
                     </div>
                 </div>
